# ticket_urgency_classifier

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements-prod.txt  requirements.txt  start_app.sh
.github/workflows/: main.yml
data/processed/: test.csv.dvc  test_features.csv.dvc  train.csv.dvc  train_features.csv.dvc
docs/: mkdocs.yml
docs/docs/: index.md
models/: best_threshold.joblib  top_tags.joblib
notebooks/: EDA.ipynb  exploration.ipynb
templates/: index.html
tests/: test_api.py  test_data.py  test_features.py  test_models.py
ticket_urgency_classifier/: __init__.py  config.py  config.yaml  dataset.py  features.py  main.py  plots.py  validate.py
ticket_urgency_classifier/api/: __init__.py  main.py  models.py  utils.py
ticket_urgency_classifier/modeling/: evaluate.py  predict.py  train.py
