[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ticket_urgency_classifier"
version = "0.0.1"
description = "classifies tickets based on the priority in classes : High Medium Low"
authors = [
  { name = "shahroz" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"
dependencies = [
    "polars>=1.32.3",
    "pandas>=2.3.1",
    "fastapi>=0.116.1",
    "seaborn>=0.13.2",
    "matplotlib>=3.10.5",
    "scikit-learn>=1.7.1",
    "xgboost>=3.0.4",
    "dvc>=3.62.0",
    "joblib>=1.5.1",
    "pandera>=0.26.0",
    "datasets>=4.0.0",
    "jupyterlab>=4.4.6",
    "pyjanitor>=0.31.0",
    "sentence-transformers==3.0.1",
    "transformers==4.44.2",
    "numpy>=2.2.6",
    "pre-commit>=4.3.0",
    "mlflow>=3.3.1",
    "vadersentiment>=3.3.2",
    "category-encoders>=2.8.1",
    "lightgbm>=4.6.0",
    "catboost>=1.2.8",
]


[tool.ruff]
line-length = 99
src = ["ticket_urgency_classifier"]
include = ["pyproject.toml", "ticket_urgency_classifier/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["ticket_urgency_classifier"]
force-sort-within-sections = true
